Добавлены некоторые юнит-тесты, указан mainClass в pom.xml