@@ -18,7 +18,7 @@ public class HabitUnmarker {
         for (Habit habit : user.getHabits()) {
             if (!habit.isComplited()) continue;
 
-            long daysPassed = ChronoUnit.DAYS.between(habit.getDaysHabitComplited().getLast(), LocalDateTime.now());
+            long daysPassed = ChronoUnit.DAYS.between(habit.getDaysHabitComplited().get(habit.getDaysHabitComplited().size()-1), LocalDateTime.now());
 
             if ( (daysPassed >= 1 && habit.getFrequency() == DAILY) || (daysPassed >= 7 && habit.getFrequency() == WEEKLY)) {
                 habit.setUncomplited();
